# value-chain-analysis

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
about/: index.html
case-studies/: README.md  colombia.md  ethiopia.md  honduras.md  index.html  rwanda.md  vietnam.md
case-studies/colombia/: index.html
case-studies/ethiopia/: index.html
case-studies/honduras/: index.html
case-studies/rwanda/: index.html
case-studies/vietnam/: index.html
data/: README.md  index.html
data/exercises/: ethiopia-exercise-answer.xlsx  ethiopia-exercise.xlsx  waterfall-model.xlsx
data/processed/: arabica_futures_daily.csv  brl_usd_daily.csv  coffee_conversion_factors.csv  coffee_country_profiles.csv  coffee_exports_by_country.csv  coffee_prices_monthly.csv  (+11 more)
lecture-notes/: README.md  coffee-key-takeaways.md  coffee-value-chain.md  ethiopian-cherry-to-nyc-cup.md  index.html  practical-tips.md  using-ai.md  value-chain-analysis.md  why-vca.md
lectures/: README.md  index.html
photos/: README.md  index.html
reading-list/: README.md  index.html
scripts/: README.md  USDA.ipynb  fetch_market_data.py  fetch_usda_coffee.py  index.html  kawapis.py
search/: search_index.json
site/: README.md  about.md  case-studies  full-course.md  index.md  lecture-notes  reading-list
skills/: 01-mapping-a-value-chain.md  02-breaking-down-value-flows.md  03-unit-conversion-and-price-analysis.md  04-benchmarking.md  05-prioritizing-recommendations.md  06-conducting-a-value-chain-deep-dive.md  README.md  index.html
stylesheets/: custom.css
(+35 files in other folders)
